--- a/po/te.po
+++ b/po/te.po
@@ -1,148 +1,154 @@
 # translation of gdl.HEAD.po to Telugu
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# Copyright (C) 2012, Swecha telugu translations team.
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Krishna Babu K <kkrothap@redhat.com>, 2009.
+# hari krishna  <hari@swecha.net>, 2011.
+# Sasi Bhushan Boddepalli <sasi@swecha.net>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: gdl.HEAD\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gdl&component=general\n"
-"POT-Creation-Date: 2009-03-08 03:39+0000\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
+"product=gdl&keywords=I18N+L10N&component=general\n"
+"POT-Creation-Date: 2011-10-03 18:18+0000\n"
 "PO-Revision-Date: 2009-03-11 13:29+0530\n"
-"Last-Translator: Krishna Babu K <kkrothap@redhat.com>\n"
-"Language-Team: Telugu <en@li.org>\n"
+"Last-Translator: Sasi Bhushan Boddepalli <sasi@swecha.net>\n"
+"Language-Team: Telugu <indlinux-telugu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\n\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"\n"
 
-#: ../gdl/gdl-dock-item-grip.c:367
+#: ../gdl/gdl-dock-item-grip.c:384
 msgid "Iconify this dock"
-msgstr ""
+msgstr "ఈ డాక్ ని ప్రతిమీకరించు "
 
-#: ../gdl/gdl-dock-item-grip.c:369
+#: ../gdl/gdl-dock-item-grip.c:386
 msgid "Close this dock"
-msgstr ""
+msgstr "ఈ డాక్ ని మూయుము"
 
-#: ../gdl/gdl-dock-item-grip.c:681 ../gdl/gdl-dock-tablabel.c:128
+#: ../gdl/gdl-dock-item-grip.c:726 ../gdl/gdl-dock-tablabel.c:128
 msgid "Controlling dock item"
-msgstr ""
+msgstr "డాక్ ఐటంని అదుపుచేయు"
 
-#: ../gdl/gdl-dock-item-grip.c:682
+#: ../gdl/gdl-dock-item-grip.c:727
 msgid "Dockitem which 'owns' this grip"
-msgstr ""
+msgstr "ఈ గ్రిప్ ని 'సొంతం' చేసుకున్న డాక్ ఐటమ్"
 
-#: ../gdl/gdl-dock-item.c:253
+#: ../gdl/gdl-dock-item.c:267
 msgid "Orientation"
 msgstr "పునశ్ఛరణ"
 
-#: ../gdl/gdl-dock-item.c:254
+#: ../gdl/gdl-dock-item.c:268
 msgid "Orientation of the docking item"
-msgstr ""
+msgstr "డాక్ ఐటం యొక్క పునశ్ఛరణ"
 
-#: ../gdl/gdl-dock-item.c:269
+#: ../gdl/gdl-dock-item.c:283
 msgid "Resizable"
-msgstr ""
+msgstr "పునః పరిమాణించు"
 
-#: ../gdl/gdl-dock-item.c:270
+#: ../gdl/gdl-dock-item.c:284
 msgid "If set, the dock item can be resized when docked in a GtkPanel widget"
-msgstr ""
+msgstr "సెట్ ఉంటే ఒక Gtk ప్యానెల్  విడ్జెట్ లో  ఉన్నప్పుడు, డాక్ అంశం మళ్ళీ అదే పరిమాణంగా చేయవచ్చు"
 
-#: ../gdl/gdl-dock-item.c:277
+#: ../gdl/gdl-dock-item.c:291
 msgid "Item behavior"
-msgstr ""
+msgstr "ఐటం ప్రవర్తన"
 
-#: ../gdl/gdl-dock-item.c:278
+#: ../gdl/gdl-dock-item.c:292
 msgid ""
 "General behavior for the dock item (i.e. whether it can float, if it's "
 "locked, etc.)"
-msgstr ""
+msgstr "డాక్ వస్తువు కోసం సాధారణ ప్రవర్తన(i.e. అది తాళం వేయబడితే, అది ఫ్లోట్ కాగలుగుతుంది, మొదలగునవి)"
 
-#: ../gdl/gdl-dock-item.c:286 ../gdl/gdl-dock-master.c:145
+#: ../gdl/gdl-dock-item.c:300 ../gdl/gdl-dock-master.c:152
 msgid "Locked"
 msgstr "తాళం వేయబడినది"
 
-#: ../gdl/gdl-dock-item.c:287
-msgid "If set, the dock item cannot be dragged around and it doesn't show a grip"
-msgstr ""
+#: ../gdl/gdl-dock-item.c:301
+msgid ""
+"If set, the dock item cannot be dragged around and it doesn't show a grip"
+msgstr "సెట్ చేస్తే, డాక్ అంశం చుట్టూ డ్రాప్ సాధ్యం కాదు మరియు ఒక పట్టును చూపించడానికి లేదు"
 
-#: ../gdl/gdl-dock-item.c:295
+#: ../gdl/gdl-dock-item.c:309
 msgid "Preferred width"
 msgstr "అభీష్ట వెడల్పు"
 
-#: ../gdl/gdl-dock-item.c:296
+#: ../gdl/gdl-dock-item.c:310
 msgid "Preferred width for the dock item"
-msgstr ""
+msgstr "డాక్ ఐటం యొక్క అభీష్టించిన వెడల్పు"
 
-#: ../gdl/gdl-dock-item.c:302
+#: ../gdl/gdl-dock-item.c:316
 msgid "Preferred height"
 msgstr "అభీష్ట ఎత్తు"
 
-#: ../gdl/gdl-dock-item.c:303
+#: ../gdl/gdl-dock-item.c:317
 msgid "Preferred height for the dock item"
-msgstr ""
+msgstr "డాక్ ఐటం యొక్క అభీష్టించిన పొడవు"
 
-#: ../gdl/gdl-dock-item.c:575
+#: ../gdl/gdl-dock-item.c:662
 #, c-format
 msgid ""
 "You can't add a dock object (%p of type %s) inside a %s. Use a GdlDock or "
 "some other compound dock object."
-msgstr ""
+msgstr "ఒక డాక్ వస్తువు  (%p of type %s) జోడించడం సాధ్యం కాదు. %s లో. ఒక GdlDock ఉపయోగించండి లేదా"
+"కొన్ని ఇతర సమ్మేళనం డాక్ వస్తువు."
 
-#: ../gdl/gdl-dock-item.c:582
+#: ../gdl/gdl-dock-item.c:669
 #, c-format
 msgid ""
 "Attempting to add a widget with type %s to a %s, but it can only contain one "
 "widget at a time; it already contains a widget of type %s"
-msgstr ""
+msgstr "ఒక% s కు రకం% s తో ఒక చేర్చు ప్రయత్నిస్తోంది, కానీ ఇది కేవలం ఒక్కటే కలిగి ఉంటుంది"
+"ఒక సమయంలో విడ్జెట్; ఇది ఇప్పటికే రకం % s యొక్క ఒక విడ్జెట్ కలిగి"
 
-#: ../gdl/gdl-dock-item.c:1268 ../gdl/gdl-dock-item.c:1318
+#: ../gdl/gdl-dock-item.c:1355 ../gdl/gdl-dock-item.c:1405
 #, c-format
 msgid "Unsupported docking strategy %s in dock object of type %s"
-msgstr ""
+msgstr "డాక్ రకము %s లోని సహకరించని %s డాక్ యొక్క పధకం"
 
 #. UnLock menuitem
-#: ../gdl/gdl-dock-item.c:1426
+#: ../gdl/gdl-dock-item.c:1513
 msgid "UnLock"
-msgstr ""
+msgstr "తెరిచి వుండిన"
 
 #. Hide menuitem.
-#: ../gdl/gdl-dock-item.c:1433
+#: ../gdl/gdl-dock-item.c:1520
 msgid "Hide"
 msgstr "మరుగునవుంచు"
 
 #. Lock menuitem
-#: ../gdl/gdl-dock-item.c:1438
+#: ../gdl/gdl-dock-item.c:1525
 msgid "Lock"
 msgstr "లాక్"
 
-#: ../gdl/gdl-dock-item.c:1676
+#: ../gdl/gdl-dock-item.c:1763
 #, c-format
 msgid "Attempt to bind an unbound item %p"
-msgstr ""
+msgstr "అపారమైన %p ని అనుసంధానించుటకు ప్రయత్నము"
 
-#: ../gdl/gdl-dock-layout.c:123 ../gdl/gdl-dock-bar.c:107
+#: ../gdl/gdl-dock-layout.c:121 ../gdl/gdl-dock-bar.c:108
 msgid "Master"
-msgstr ""
+msgstr "మాస్టర్"
 
-#: ../gdl/gdl-dock-layout.c:124
+#: ../gdl/gdl-dock-layout.c:122
 msgid "GdlDockMaster object which the layout object is attached to"
-msgstr ""
+msgstr "లేఅవుట్ వస్తువు అనుసంధానించబడుతుంది ఇది Gdl DockMaster వస్తువు"
 
-#: ../gdl/gdl-dock-layout.c:131
+#: ../gdl/gdl-dock-layout.c:129
 msgid "Dirty"
-msgstr ""
+msgstr "చెడ్డదైన"
 
-#: ../gdl/gdl-dock-layout.c:132
+#: ../gdl/gdl-dock-layout.c:130
 msgid "True if the layouts have changed and need to be saved to a file"
-msgstr ""
+msgstr "లే అవుట్ మార్పు కలిగి వుంటే, ఇది సత్యమైనది మరియు దాచవలసిన అవసరం ఉంది."
 
-#. FIXME: pop up an error dialog
-#: ../gdl/gdl-dock-layout.c:563
+#: ../gdl/gdl-dock-layout.c:561
 #, c-format
 msgid "Could not load layout user interface file '%s'"
-msgstr ""
+msgstr "వినియోగదారుని ఇంటర్ఫేస్ ఫైల్ '%s' కి లేఅవుట్ లోడు చేయుట కుదురుటలేదు"
 
 #: ../gdl/gdl-dock-layout.c:618
 msgid "Visible"
@@ -152,283 +158,285 @@ msgstr "కనిపించు"
 msgid "Item"
 msgstr "అంశ"
 
-#: ../gdl/gdl-dock-layout.c:708 ../gdl/gdl-dock-object.c:119
+#: ../gdl/gdl-dock-layout.c:710 ../gdl/gdl-dock-object.c:115
 msgid "Name"
 msgstr "నామము"
 
-#: ../gdl/gdl-dock-layout.c:741 ../gdl/layout.glade.h:1
-msgid "Dock items"
-msgstr ""
-
-#: ../gdl/gdl-dock-layout.c:747 ../gdl/layout.glade.h:3
-msgid "Saved layouts"
-msgstr ""
-
-#: ../gdl/gdl-dock-layout.c:789
+#: ../gdl/gdl-dock-layout.c:768
 #, c-format
 msgid ""
 "While loading layout: don't know how to create a dock object whose nick is '%"
 "s'"
 msgstr ""
+"లేఅవుట్ లోడ్ చేస్తున్నప్పుడు: దీని మారు పేరు %s కలిగి ఉన్న ఒక డాక్ వస్తువును ఎలా సృష్టించాలో తెలియదు"
 
-#: ../gdl/gdl-dock-layout.c:1268
-msgid "Layout managment"
-msgstr ""
-
-#: ../gdl/gdl-dock-master.c:138 ../gdl/gdl-dock.c:186
+#: ../gdl/gdl-dock-master.c:145 ../gdl/gdl-dock.c:188
 msgid "Default title"
-msgstr ""
-
-#: ../gdl/gdl-dock-master.c:139
-msgid "Default title for newly created floating docks"
-msgstr ""
+msgstr "అప్రమేయ శీర్షిక"
 
 #: ../gdl/gdl-dock-master.c:146
+msgid "Default title for newly created floating docks"
+msgstr "కొత్తగా సృష్టించబడిన ఫ్లోటింగ్ డాక్ ల అప్రమేయ శీర్షిక"
+
+#: ../gdl/gdl-dock-master.c:153
 msgid ""
 "If is set to 1, all the dock items bound to the master are locked; if it's "
 "0, all are unlocked; -1 indicates inconsistency among the items"
 msgstr ""
+"ఒకవేళ 1 అమర్చితే, మాస్టర్ పూర్తిగా పరిమితమై అన్ని డాక్ అంశాలను లాక్ అయి ఉంటాయి; అది 0  ఉంటే, అన్నీ లాక్ తీయబడిఉంటాయి; -1 అంశాలను మధ్య అసంగతి సూచిస్తుంది"
 
-#: ../gdl/gdl-dock-master.c:154 ../gdl/gdl-switcher.c:696
+#: ../gdl/gdl-dock-master.c:161 ../gdl/gdl-switcher.c:778
 msgid "Switcher Style"
-msgstr ""
+msgstr "స్విచ్చర్ శైలి"
 
-#: ../gdl/gdl-dock-master.c:155 ../gdl/gdl-switcher.c:697
+#: ../gdl/gdl-dock-master.c:162 ../gdl/gdl-switcher.c:779
 msgid "Switcher buttons style"
-msgstr ""
+msgstr "స్విచ్చర్ బట్టన్‌ల శైలి"
 
-#: ../gdl/gdl-dock-master.c:761
+#: ../gdl/gdl-dock-master.c:772
 #, c-format
 msgid ""
 "master %p: unable to add object %p[%s] to the hash.  There already is an "
 "item with that name (%p)."
 msgstr ""
+"మాస్టర్ %p: హాష్ కి  %p[%s] వస్తువు చేర్చడం సాధ్యం కాలేదు. అక్కడ ఇప్పటికే ఆ పేరు (% p) తో ఒక అంశం ఉంది."
 
-#: ../gdl/gdl-dock-master.c:934
+#: ../gdl/gdl-dock-master.c:944
 #, c-format
 msgid ""
 "The new dock controller %p is automatic.  Only manual dock objects should be "
 "named controller."
 msgstr ""
+"కొత్త డాక్ కంట్రోలర్ %p ఆటోమేటిక్ గా ఉంది. కేవలం మానవీయ డాక్ వస్తువులనే  నిర్వాహకి అనవలెను."
 
-#: ../gdl/gdl-dock-notebook.c:134
+#: ../gdl/gdl-dock-notebook.c:137
 msgid "Page"
 msgstr "పుట"
 
-#: ../gdl/gdl-dock-notebook.c:135
+#: ../gdl/gdl-dock-notebook.c:138
 msgid "The index of the current page"
 msgstr "ప్రస్తుత పుటయొక్క విషయసూచిక"
 
-#: ../gdl/gdl-dock-object.c:120
+#: ../gdl/gdl-dock-object.c:116
 msgid "Unique name for identifying the dock object"
-msgstr ""
+msgstr "డాక్ ని గుర్తించుటకు అద్వితీయ నామము"
 
-#: ../gdl/gdl-dock-object.c:127
+#: ../gdl/gdl-dock-object.c:123
 msgid "Long name"
-msgstr ""
+msgstr "పొడవైన నామము"
 
-#: ../gdl/gdl-dock-object.c:128
+#: ../gdl/gdl-dock-object.c:124
 msgid "Human readable name for the dock object"
-msgstr ""
+msgstr "డాక్ కు మానవుడు చదవకలిగిన నామము"
 
-#: ../gdl/gdl-dock-object.c:134
+#: ../gdl/gdl-dock-object.c:130
 msgid "Stock Icon"
 msgstr "స్టాక్ ప్రతిమ"
 
-#: ../gdl/gdl-dock-object.c:135
+#: ../gdl/gdl-dock-object.c:131
 msgid "Stock icon for the dock object"
-msgstr ""
+msgstr "డాక్ యొక్క స్టాక్ ప్రతిమ"
 
-#: ../gdl/gdl-dock-object.c:141
+#: ../gdl/gdl-dock-object.c:137
 msgid "Dock master"
-msgstr ""
+msgstr "డాక్ మాస్టర్"
 
-#: ../gdl/gdl-dock-object.c:142
+#: ../gdl/gdl-dock-object.c:138
 msgid "Dock master this dock object is bound to"
-msgstr ""
+msgstr "డాక్ కి అనుసంధానమైన డాక్ మాస్టర్"
 
-#: ../gdl/gdl-dock-object.c:444
+#: ../gdl/gdl-dock-object.c:435
 #, c-format
 msgid ""
 "Call to gdl_dock_object_dock in a dock object %p (object type is %s) which "
 "hasn't implemented this method"
 msgstr ""
+"ఒక డాక్ వస్తువు%p (వస్తువు రకం %s ఉంటుంది) లో gdl_dock_object_dock కు కాల్ ఈ పద్ధతి అమలు లేదు"
 
-#: ../gdl/gdl-dock-object.c:576
+#: ../gdl/gdl-dock-object.c:574
 #, c-format
 msgid ""
 "Dock operation requested in a non-bound object %p. The application might "
 "crash"
 msgstr ""
+"డాక్ ఆపరేషన్  బందన కాని వస్తువు %p లో అభ్యర్థించింది. అప్లికేషన్ క్రాషయి ఉండవచ్చు"
 
-#: ../gdl/gdl-dock-object.c:583
+#: ../gdl/gdl-dock-object.c:581
 #, c-format
 msgid "Cannot dock %p to %p because they belong to different masters"
-msgstr ""
+msgstr "వివిధ మాస్టర్లకు సంభందించినవి కనుక %p ని %p తో డాక్ చేయుట కుదురుటలేదు"
 
-#: ../gdl/gdl-dock-object.c:625
+#: ../gdl/gdl-dock-object.c:623
 #, c-format
-msgid "Attempt to bind to %p an already bound dock object %p (current master: %p)"
+msgid ""
+"Attempt to bind to %p an already bound dock object %p (current master: %p)"
 msgstr ""
+"ముందుగానే అనుసంధానింపబడ్డ %p డాక్ కు %p ని అనుసంధానించు ప్రయత్నం (ప్రస్తుత మాస్టర్: %p)"
 
-#: ../gdl/gdl-dock-paned.c:131
+#: ../gdl/gdl-dock-paned.c:128
 msgid "Position"
 msgstr "స్థానము"
 
-#: ../gdl/gdl-dock-paned.c:132
+#: ../gdl/gdl-dock-paned.c:129
 msgid "Position of the divider in pixels"
-msgstr ""
+msgstr "పిక్సెళ్ళలో డివైడర్ స్థానము"
 
-#: ../gdl/gdl-dock-placeholder.c:143
+#: ../gdl/gdl-dock-placeholder.c:148
 msgid "Sticky"
-msgstr ""
+msgstr "స్టికీ"
 
-#: ../gdl/gdl-dock-placeholder.c:144
+#: ../gdl/gdl-dock-placeholder.c:149
 msgid ""
 "Whether the placeholder will stick to its host or move up the hierarchy when "
 "the host is redocked"
-msgstr ""
+msgstr "స్థానికంగా ఉన్నది, అతిధేయానికి అతుక్కుని ఉండవచ్చు లేదా అతిధేయి రి డాక్ అయినపుడు క్రమంలో జరిగి ఉండవచ్చు."
 
-#: ../gdl/gdl-dock-placeholder.c:151
+#: ../gdl/gdl-dock-placeholder.c:156
 msgid "Host"
 msgstr "అతిథ్యం"
 
-#: ../gdl/gdl-dock-placeholder.c:152
+#: ../gdl/gdl-dock-placeholder.c:157
 msgid "The dock object this placeholder is attached to"
-msgstr ""
+msgstr "ఈ ప్లేస్‌హోల్డర్ కి జతపరచబడ్డడాక్"
 
-#: ../gdl/gdl-dock-placeholder.c:159
+#: ../gdl/gdl-dock-placeholder.c:164
 msgid "Next placement"
-msgstr ""
+msgstr "తర్వాత స్థానము"
 
-#: ../gdl/gdl-dock-placeholder.c:160
+#: ../gdl/gdl-dock-placeholder.c:165
 msgid ""
 "The position an item will be docked to our host if a request is made to dock "
 "to us"
 msgstr ""
-
-#: ../gdl/gdl-dock-placeholder.c:169 ../gdl/gdl-dock.c:193
+"మాకు డాక్ చేయడానికి అభ్యర్థన వస్తే,  మా అతిధేయానికి  ఒక స్థానం ఒక వస్తువు డాక్ గా ఉండవచ్చు. "
+#: ../gdl/gdl-dock-placeholder.c:174 ../gdl/gdl-dock.c:195
 msgid "Width"
 msgstr "లోతు"
 
-#: ../gdl/gdl-dock-placeholder.c:170
+#: ../gdl/gdl-dock-placeholder.c:175
 msgid "Width for the widget when it's attached to the placeholder"
-msgstr ""
+msgstr "ప్లేస్‌హోల్డర్ కి జతపరిచినప్పటి విడ్జెట్ యొక్క వెడల్పు"
 
-#: ../gdl/gdl-dock-placeholder.c:177 ../gdl/gdl-dock.c:201
+#: ../gdl/gdl-dock-placeholder.c:182 ../gdl/gdl-dock.c:203
 msgid "Height"
-msgstr "ఎత్తు"
+msgstr "పొడవు"
 
-#: ../gdl/gdl-dock-placeholder.c:178
+#: ../gdl/gdl-dock-placeholder.c:183
 msgid "Height for the widget when it's attached to the placeholder"
-msgstr ""
+msgstr "ప్లేస్‌హోల్డర్ కి జతపరిచినప్పటి విడ్జెట్ యొక్క పొడవు "
 
-#: ../gdl/gdl-dock-placeholder.c:184
+#: ../gdl/gdl-dock-placeholder.c:189
 msgid "Floating Toplevel"
-msgstr ""
+msgstr "తేలుతున్న టాప్‌లెవల్"
 
-#: ../gdl/gdl-dock-placeholder.c:185
+#: ../gdl/gdl-dock-placeholder.c:190
 msgid "Whether the placeholder is standing in for a floating toplevel dock"
-msgstr ""
+msgstr "పైస్థాయి రేవుకు పోవడానికి  ఒక స్థానంలో ఉన్నవాళ్ళు నిలబడి ఉండవచ్చు"
 
-#: ../gdl/gdl-dock-placeholder.c:191
-msgid "X-Coordinate"
-msgstr ""
+#: ../gdl/gdl-dock-placeholder.c:196
+msgid "X Coordinate"
+msgstr "X నిరూపక"
 
-#: ../gdl/gdl-dock-placeholder.c:192
-msgid "X-Coordinate for dock when floating"
-msgstr ""
+#: ../gdl/gdl-dock-placeholder.c:197
+msgid "X coordinate for dock when floating"
+msgstr "డాక్ ఫ్లోట్ అవుతున్నపుడు X నిరూపక"
 
-#: ../gdl/gdl-dock-placeholder.c:198
-msgid "Y-Coordinate"
-msgstr ""
+#: ../gdl/gdl-dock-placeholder.c:203
+msgid "Y Coordinate"
+msgstr "Y నిరుపక"
 
-#: ../gdl/gdl-dock-placeholder.c:199
-msgid "Y-Coordinate for dock when floating"
-msgstr ""
+#: ../gdl/gdl-dock-placeholder.c:204
+msgid "Y coordinate for dock when floating"
+msgstr "డాక్ ఫ్లోట్ అవుతున్నపుడు Y నిరూపక"
 
-#: ../gdl/gdl-dock-placeholder.c:494
+#: ../gdl/gdl-dock-placeholder.c:496
 msgid "Attempt to dock a dock object to an unbound placeholder"
-msgstr ""
+msgstr "ఒక అవధులులేని ప్లేస్హోల్డర్ ఒక డాక్ వస్తువు రేవుకు  ప్రయత్నం"
 
-#: ../gdl/gdl-dock-placeholder.c:618
+#: ../gdl/gdl-dock-placeholder.c:608
 #, c-format
 msgid "Got a detach signal from an object (%p) who is not our host %p"
-msgstr ""
+msgstr " %p మా హోస్ట్ కాదు, ఒక వస్తువు (%p) నుండి ఒక జతపరచ వద్దని సిగ్నల్ వచ్చింది"
 
-#: ../gdl/gdl-dock-placeholder.c:643
+#: ../gdl/gdl-dock-placeholder.c:633
 #, c-format
 msgid ""
 "Something weird happened while getting the child placement for %p from "
 "parent %p"
-msgstr ""
+msgstr "మాతృ%p నుండి %p కోసం బాల ప్లేస్ మెంట్ పొందడానికి అయితే ఏదో అదృష్టము జరిగింది"
 
 #: ../gdl/gdl-dock-tablabel.c:129
 msgid "Dockitem which 'owns' this tablabel"
-msgstr ""
-
-#: ../gdl/gdl-dock-bar.c:108
+msgstr "టాబ్ లేబల్ ని 'సొంతం' చేసుకున్న డాక్‌ఐటమ్"
+#: ../gdl/gdl-dock-bar.c:109
 msgid "GdlDockMaster object which the dockbar widget is attached to"
-msgstr ""
-
-#: ../gdl/gdl-dock-bar.c:115
-msgid "Dockbar style"
-msgstr ""
+msgstr "Gdl డాక్ మాస్టర్ వస్తువు, అది ఒక డాక్ బార్ విడ్జెట్ అనుసంధానించబడుతుంది , అది"
 
 #: ../gdl/gdl-dock-bar.c:116
-msgid "Dockbar style to show items on it"
-msgstr ""
+msgid "Dockbar style"
+msgstr "డాక్‌బార్ శైలి"
 
-#: ../gdl/gdl-dock.c:178
+#: ../gdl/gdl-dock-bar.c:117
+msgid "Dockbar style to show items on it"
+msgstr "ఐటంలను చూపించుటకు డాక్‌బార్ శైలి"
+
+#: ../gdl/gdl-dock.c:180
 msgid "Floating"
 msgstr "తేలుచున్న"
 
-#: ../gdl/gdl-dock.c:179
+#: ../gdl/gdl-dock.c:181
 msgid "Whether the dock is floating in its own window"
-msgstr ""
+msgstr "డాక్ తన సొంత విండోలో ఫ్లోట్ అవుతుందేమో"
 
-#: ../gdl/gdl-dock.c:187
+#: ../gdl/gdl-dock.c:189
 msgid "Default title for the newly created floating docks"
-msgstr ""
+msgstr "కొత్తగా సృష్టించిన ఫ్లోట్ రకమైన డాక్ యొక్క అప్రమేయ శీర్షిక"
 
-#: ../gdl/gdl-dock.c:194
+#: ../gdl/gdl-dock.c:196
 msgid "Width for the dock when it's of floating type"
-msgstr ""
+msgstr "ఫ్లోట్ రకమైన డాక్ యొక్క వెడల్పు"
 
-#: ../gdl/gdl-dock.c:202
+#: ../gdl/gdl-dock.c:204
 msgid "Height for the dock when it's of floating type"
-msgstr ""
+msgstr "ఫ్లోట్ రకమైన డాక్ యొక్క పొడవు"
 
-#: ../gdl/gdl-dock.c:209
+#: ../gdl/gdl-dock.c:211
 msgid "Float X"
-msgstr ""
+msgstr "ఫ్లోట్ X"
 
-#: ../gdl/gdl-dock.c:210
+#: ../gdl/gdl-dock.c:212
 msgid "X coordinate for a floating dock"
-msgstr ""
+msgstr "ఫ్లోట్ డాక్ యొక్క X నిరూపక"
 
-#: ../gdl/gdl-dock.c:217
+#: ../gdl/gdl-dock.c:219
 msgid "Float Y"
-msgstr ""
+msgstr "ఫ్లోట్ Y"
 
-#: ../gdl/gdl-dock.c:218
+#: ../gdl/gdl-dock.c:220
 msgid "Y coordinate for a floating dock"
-msgstr ""
+msgstr "ఫ్లోట్ డాక్ యొక్క Y నిరూపక"
 
-#: ../gdl/gdl-dock.c:499
+#: ../gdl/gdl-dock.c:481
 #, c-format
 msgid "Dock #%d"
-msgstr ""
+msgstr "#%d డాక్"
 
-#: ../gdl/layout.glade.h:2
+#: ../gdl/layout.ui.h:1
+msgid "Dock items"
+msgstr "డాక్ యొక్క ఐటమ్‌లు"
+
+#: ../gdl/layout.ui.h:2
 msgid "Layout Managment"
-msgstr ""
+msgstr "లేఅవుట్‌ల నిర్వాహకము"
 
-#: ../gdl/layout.glade.h:4
+#: ../gdl/layout.ui.h:3
+msgid "Saved layouts"
+msgstr "దాచిన లేఅవుట్‌లు"
+
+#: ../gdl/layout.ui.h:4
 msgid "_Load"
 msgstr "నింపుము (_L)"
 
-#: ../gdl/layout.glade.h:5
+#: ../gdl/layout.ui.h:5
 msgid "_Lock dock items"
-msgstr ""
-
+msgstr "డాక్ ఐటమ్‌లకు తాళమువేయు(_L)"
