--- a/po/de.po
+++ b/po/de.po
@@ -6,38 +6,40 @@
 # Hendrik Brandt <heb@gnome-de.org>, 2008.
 # Hendrik Richter <hendrikr@gnome.org>, 2008.
 # Mario Blättermann <mario.blaettermann@gmail.com>, 2010, 2012.
+# Benjamin Steinwender <b@stbe.at>, 2014.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: gdl master\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-11-12 23:36+0100\n"
-"PO-Revision-Date: 2012-11-12 23:37+0100\n"
-"Last-Translator: Christian Kirbach <christian.kirbach@gmail.com>\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
+"product=gdl&keywords=I18N+L10N&component=general\n"
+"POT-Creation-Date: 2014-02-02 06:17+0000\n"
+"PO-Revision-Date: 2014-02-02 12:50+0100\n"
+"Last-Translator: Benjamin Steinwender <b@stbe.at>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.5.4\n"
 
-#: ../gdl/deprecated/gdl-dock-tablabel.c:140
-#: ../gdl/gdl-dock-item-grip.c:729
+#: ../gdl/deprecated/gdl-dock-tablabel.c:139 ../gdl/gdl-dock-item-grip.c:729
 msgid "Controlling dock item"
 msgstr "Dock-Objekt wird gesteuert"
 
-#: ../gdl/deprecated/gdl-dock-tablabel.c:141
+#: ../gdl/deprecated/gdl-dock-tablabel.c:140
 msgid "Dockitem which 'owns' this tablabel"
 msgstr "Dock-Objekt, dem diese Reiterbeschriftung »gehört«"
 
 # Master nicht übersetzbar (ähnlich wie bei Datenspeicherung Master/Slave)?
-#: ../gdl/gdl-dock-bar.c:127
-#: ../gdl/gdl-dock-layout.c:128
+#: ../gdl/gdl-dock-bar.c:127 ../gdl/gdl-dock-layout.c:128
 msgid "Master"
 msgstr "Master"
 
 #: ../gdl/gdl-dock-bar.c:128
 msgid "GdlDockMaster object which the dockbar widget is attached to"
-msgstr "GdlDockMaster-Objekt, an welches das Dockleisten-Widget angehängt wirdgggg"
+msgstr ""
+"GdlDockMaster-Objekt, an welches das Dockleisten-Widget angehängt wirdgggg"
 
 #: ../gdl/gdl-dock-bar.c:140
 msgid "Dockbar style"
@@ -53,10 +55,9 @@ msgstr "Freischwebend"
 
 #: ../gdl/gdl-dock.c:198
 msgid "Whether the dock is floating in its own window"
-msgstr "Ob das Dock frei in seinem eigenen Fenster schwebt"
+msgstr "Legt fest, ob das Dock frei in seinem eigenen Fenster schwebt"
 
-#: ../gdl/gdl-dock.c:205
-#: ../gdl/gdl-dock-master.c:187
+#: ../gdl/gdl-dock.c:205 ../gdl/gdl-dock-master.c:198
 msgid "Default title"
 msgstr "Vorgegebener Titel"
 
@@ -64,8 +65,7 @@ msgstr "Vorgegebener Titel"
 msgid "Default title for the newly created floating docks"
 msgstr "Vorgegebener Titel für die neu erzeugten, freischebenden Docks."
 
-#: ../gdl/gdl-dock.c:212
-#: ../gdl/gdl-dock-placeholder.c:192
+#: ../gdl/gdl-dock.c:212 ../gdl/gdl-dock-placeholder.c:192
 msgid "Width"
 msgstr "Breite"
 
@@ -73,8 +73,7 @@ msgstr "Breite"
 msgid "Width for the dock when it's of floating type"
 msgstr "Breite des Docks, wenn es den Typ freischwebend hat"
 
-#: ../gdl/gdl-dock.c:220
-#: ../gdl/gdl-dock-placeholder.c:200
+#: ../gdl/gdl-dock.c:220 ../gdl/gdl-dock-placeholder.c:200
 msgid "Height"
 msgstr "Höhe"
 
@@ -103,8 +102,12 @@ msgid "Skip taskbar"
 msgstr "Fensterleiste unberührt lassen"
 
 #: ../gdl/gdl-dock.c:256
-msgid "Whether or not to prevent a floating dock window from appearing in the taskbar"
-msgstr "Legt fest, ob kein frei schwebendes Dock-Fenster in der Fensterleiste erscheinen soll"
+msgid ""
+"Whether or not to prevent a floating dock window from appearing in the "
+"taskbar"
+msgstr ""
+"Legt fest, ob kein frei schwebendes Dock-Fenster in der Fensterleiste "
+"erscheinen soll"
 
 #: ../gdl/gdl-dock-item.c:385
 msgid "Orientation"
@@ -120,24 +123,32 @@ msgstr "Größe veränderbar"
 
 #: ../gdl/gdl-dock-item.c:402
 msgid "If set, the dock item can be resized when docked in a GtkPanel widget"
-msgstr "Falls gesetzt, kann die Größe des Dock-Objekts verändert werden, wenn es in einem GtkPanel-Widget angedockt ist"
+msgstr ""
+"Falls gesetzt, kann die Größe des Dock-Objekts verändert werden, wenn es in "
+"einem GtkPanel-Widget angedockt ist"
 
 #: ../gdl/gdl-dock-item.c:409
 msgid "Item behavior"
 msgstr "Objektverhalten"
 
 #: ../gdl/gdl-dock-item.c:410
-msgid "General behavior for the dock item (i.e. whether it can float, if it's locked, etc.)"
-msgstr "Allgemeines Verhalten für das Dock-Objekt (also ob es schweben kann, es gesperrt ist, u.s.w.)"
+msgid ""
+"General behavior for the dock item (i.e. whether it can float, if it's "
+"locked, etc.)"
+msgstr ""
+"Allgemeines Verhalten für das Dock-Objekt (also ob es schweben kann, es "
+"gesperrt ist, u.s.w.)"
 
-#: ../gdl/gdl-dock-item.c:418
-#: ../gdl/gdl-dock-master.c:194
+#: ../gdl/gdl-dock-item.c:418 ../gdl/gdl-dock-master.c:205
 msgid "Locked"
 msgstr "Gesperrt"
 
 #: ../gdl/gdl-dock-item.c:419
-msgid "If set, the dock item cannot be dragged around and it doesn't show a grip"
-msgstr "Falls gesetzt, kann das Dock-Objekt nicht verschoben werden und zeigt keinen Griff"
+msgid ""
+"If set, the dock item cannot be dragged around and it doesn't show a grip"
+msgstr ""
+"Falls gesetzt, kann das Dock-Objekt nicht verschoben werden und zeigt keinen "
+"Griff"
 
 #: ../gdl/gdl-dock-item.c:427
 msgid "Preferred width"
@@ -160,8 +171,12 @@ msgid "Iconified"
 msgstr "Als Symbol"
 
 #: ../gdl/gdl-dock-item.c:450
-msgid "If set, the dock item is hidden but it has a corresponding icon in the dock bar allowing to show it again."
-msgstr "Falls gesetzt, so wird das Dock-Objekt verborgen, aber es gibt ein Symbol in der Dock-Leiste, um es wieder erscheinen zu lassen."
+msgid ""
+"If set, the dock item is hidden but it has a corresponding icon in the dock "
+"bar allowing to show it again."
+msgstr ""
+"Falls gesetzt, so wird das Dock-Objekt verborgen, aber es gibt ein Symbol in "
+"der Dock-Leiste, um es wieder erscheinen zu lassen."
 
 #: ../gdl/gdl-dock-item.c:466
 msgid "Closed"
@@ -171,38 +186,46 @@ msgstr "Geschlossen"
 msgid "Whether the widget is closed."
 msgstr "Legt fest, ob das Widget geschlossen sein soll."
 
-#: ../gdl/gdl-dock-item.c:873
+#: ../gdl/gdl-dock-item.c:872
 #, c-format
-msgid "You can't add a dock object (%p of type %s) inside a %s. Use a GdlDock or some other compound dock object."
-msgstr "Sie können kein Dock-Objekt (%p des Typs %s) in einem %s hinzufügen. Verwenden Sie ein GdlDock oder ein anderes zusammengesetztes Dock-Objekt"
+msgid ""
+"You can't add a dock object (%p of type %s) inside a %s. Use a GdlDock or "
+"some other compound dock object."
+msgstr ""
+"Sie können kein Dock-Objekt (%p des Typs %s) in einem %s hinzufügen. "
+"Verwenden Sie ein GdlDock oder ein anderes zusammengesetztes Dock-Objekt"
 
-#: ../gdl/gdl-dock-item.c:880
+#: ../gdl/gdl-dock-item.c:879
 #, c-format
-msgid "Attempting to add a widget with type %s to a %s, but it can only contain one widget at a time; it already contains a widget of type %s"
-msgstr "Es wurde versucht, ein Widget vom Typ %s zu einem %s hinzuzufügen, dieses kann aber immer nur ein Widget enthalten. Es enthält bereits ein Widget vom Typ %s"
+msgid ""
+"Attempting to add a widget with type %s to a %s, but it can only contain one "
+"widget at a time; it already contains a widget of type %s"
+msgstr ""
+"Es wurde versucht, ein Widget vom Typ %s zu einem %s hinzuzufügen, dieses "
+"kann aber immer nur ein Widget enthalten. Es enthält bereits ein Widget vom "
+"Typ %s"
 
-#: ../gdl/gdl-dock-item.c:1570
-#: ../gdl/gdl-dock-item.c:1620
+#: ../gdl/gdl-dock-item.c:1567 ../gdl/gdl-dock-item.c:1617
 #, c-format
 msgid "Unsupported docking strategy %s in dock object of type %s"
 msgstr "Nicht unterstützte Dock-Strategie %s in Dock-Objekt des Typs %s"
 
 #. UnLock menuitem
-#: ../gdl/gdl-dock-item.c:1733
+#: ../gdl/gdl-dock-item.c:1730
 msgid "UnLock"
 msgstr "Freigeben"
 
 #. Hide menuitem.
-#: ../gdl/gdl-dock-item.c:1740
+#: ../gdl/gdl-dock-item.c:1737
 msgid "Hide"
 msgstr "Verbergen"
 
 #. Lock menuitem
-#: ../gdl/gdl-dock-item.c:1745
+#: ../gdl/gdl-dock-item.c:1742
 msgid "Lock"
 msgstr "Sperren"
 
-#: ../gdl/gdl-dock-item.c:2015
+#: ../gdl/gdl-dock-item.c:2014
 #, c-format
 msgid "Attempt to bind an unbound item %p"
 msgstr "Versuch, ein unverbundenes Objekt %p anzubinden"
@@ -220,8 +243,11 @@ msgid "Dockitem which 'owns' this grip"
 msgstr "Dock-Objekt, dem dieser Griff »gehört«"
 
 #: ../gdl/gdl-dock-layout.c:129
-msgid "GdlDockMaster or GdlDockObject object which the layout object is attached to"
-msgstr "GdlDockMaster- oder GdlDockObject-Objekt, an welches das Layout-Objekt angehängt wird"
+msgid ""
+"GdlDockMaster or GdlDockObject object which the layout object is attached to"
+msgstr ""
+"GdlDockMaster- oder GdlDockObject-Objekt, an welches das Layout-Objekt "
+"angehängt wird"
 
 #: ../gdl/gdl-dock-layout.c:136
 msgid "Dirty"
@@ -229,42 +255,75 @@ msgstr "Schmutzig"
 
 #: ../gdl/gdl-dock-layout.c:137
 msgid "True if the layouts have changed and need to be saved to a file"
-msgstr "Wahr falls die Layout verändert wurden und in eine Datei gespeichert werden müssen"
+msgstr ""
+"Wahr falls die Layout verändert wurden und in eine Datei gespeichert werden "
+"müssen"
 
 #: ../gdl/gdl-dock-layout.c:303
 #, c-format
-msgid "While loading layout: don't know how to create a dock object whose nick is '%s'"
-msgstr "Problem beim Laden des Layouts: Es ist unbekannt, wie ein Dock-Objekt mit dem Alias »%s« erstellt werden soll"
+msgid ""
+"While loading layout: don't know how to create a dock object whose nick is "
+"'%s'"
+msgstr ""
+"Problem beim Laden des Layouts: Es ist unbekannt, wie ein Dock-Objekt mit "
+"dem Alias »%s« erstellt werden soll"
 
-#: ../gdl/gdl-dock-master.c:188
+#: ../gdl/gdl-dock-master.c:199
 msgid "Default title for newly created floating docks"
 msgstr "Vorgegebener Titel für neu erstellte freischwebende Docks"
 
-#: ../gdl/gdl-dock-master.c:195
-msgid "If is set to 1, all the dock items bound to the master are locked; if it's 0, all are unlocked; -1 indicates inconsistency among the items"
-msgstr "Falls auf »1« gesetzt, werden alle an den Master angebundene Dock-Objekte gesperrt; falls auf »0« gesetzt, sind alle nicht gesperrt; »-1« zeigt Inkonsistenz unter den Objekten an"
+#: ../gdl/gdl-dock-master.c:206
+msgid ""
+"If is set to 1, all the dock items bound to the master are locked; if it's "
+"0, all are unlocked; -1 indicates inconsistency among the items"
+msgstr ""
+"Falls auf »1« gesetzt, werden alle an den Master angebundene Dock-Objekte "
+"gesperrt; falls auf »0« gesetzt, sind alle nicht gesperrt; »-1« zeigt "
+"Inkonsistenz unter den Objekten an"
 
-#: ../gdl/gdl-dock-master.c:203
-#: ../gdl/gdl-switcher.c:842
+#: ../gdl/gdl-dock-master.c:214 ../gdl/gdl-switcher.c:895
 msgid "Switcher Style"
 msgstr "Umschalterstil"
 
-#: ../gdl/gdl-dock-master.c:204
-#: ../gdl/gdl-switcher.c:843
+#: ../gdl/gdl-dock-master.c:215 ../gdl/gdl-switcher.c:896
 msgid "Switcher buttons style"
 msgstr "Stil des Umschalteknopf"
 
-#: ../gdl/gdl-dock-master.c:831
-#, c-format
-msgid "master %p: unable to add object %p[%s] to the hash.  There already is an item with that name (%p)."
-msgstr "Master %p: Objekt %p[%s] konnte nicht zum Hash hinzugefügt werden. Es gibt bereits ein gleichnamiges Objekt (%p)."
+#: ../gdl/gdl-dock-master.c:222 ../gdl/gdl-switcher.c:903
+msgid "Tab Position"
+msgstr "Tabulatorposition"
 
-#: ../gdl/gdl-dock-master.c:1052
-#, c-format
-msgid "The new dock controller %p is automatic.  Only manual dock objects should be named controller."
-msgstr "Die neue Dock-Steuerung %p ist automatisch. Nur manuelle Dock-Objekte sollten zur Steuerung ernannt werden"
+#: ../gdl/gdl-dock-master.c:223 ../gdl/gdl-switcher.c:904
+msgid "Which side of the notebook holds the tabs"
+msgstr "Welche Seite des Notebooks enthält die Tabulatoren"
 
-#: ../gdl/gdl-dock-master.c:1083
+#: ../gdl/gdl-dock-master.c:230 ../gdl/gdl-switcher.c:911
+msgid "Tab reorderable"
+msgstr "Tabulator kann angeordnet werden"
+
+#: ../gdl/gdl-dock-master.c:231 ../gdl/gdl-switcher.c:912
+msgid "Whether the tab is reorderable by user action"
+msgstr "Legt fest, ob der Tabulator durch den Benutzer angeordnet werden kann"
+
+#: ../gdl/gdl-dock-master.c:874
+#, c-format
+msgid ""
+"master %p: unable to add object %p[%s] to the hash.  There already is an "
+"item with that name (%p)."
+msgstr ""
+"Master %p: Objekt %p[%s] konnte nicht zum Hash hinzugefügt werden. Es gibt "
+"bereits ein gleichnamiges Objekt (%p)."
+
+#: ../gdl/gdl-dock-master.c:1101
+#, c-format
+msgid ""
+"The new dock controller %p is automatic.  Only manual dock objects should be "
+"named controller."
+msgstr ""
+"Die neue Dock-Steuerung %p ist automatisch. Nur manuelle Dock-Objekte "
+"sollten zur Steuerung ernannt werden"
+
+#: ../gdl/gdl-dock-master.c:1132
 #, c-format
 msgid "Dock #%d"
 msgstr "Dock Nr. %d"
@@ -277,65 +336,78 @@ msgstr "Seite"
 msgid "The index of the current page"
 msgstr "Der Index der aktuellen Seite"
 
-#: ../gdl/gdl-dock-object.c:203
+#: ../gdl/gdl-dock-object.c:205
 msgid "Name"
 msgstr "Name"
 
-#: ../gdl/gdl-dock-object.c:204
+#: ../gdl/gdl-dock-object.c:206
 msgid "Unique name for identifying the dock object"
 msgstr "Eindeutiger Name zur Identifikation des Dock-Objekts"
 
-#: ../gdl/gdl-dock-object.c:216
+#: ../gdl/gdl-dock-object.c:220
 msgid "Long name"
 msgstr "Langer Name"
 
-#: ../gdl/gdl-dock-object.c:217
+#: ../gdl/gdl-dock-object.c:221
 msgid "Human readable name for the dock object"
 msgstr "Leserlicher Name des Dock-Objekts"
 
-#: ../gdl/gdl-dock-object.c:228
+#: ../gdl/gdl-dock-object.c:234
 msgid "Stock Icon"
 msgstr "Standardsymbol"
 
-#: ../gdl/gdl-dock-object.c:229
+#: ../gdl/gdl-dock-object.c:235
 msgid "Stock icon for the dock object"
 msgstr "Standardsymbol für das Dock-Objekt"
 
-#: ../gdl/gdl-dock-object.c:242
+#: ../gdl/gdl-dock-object.c:250
 msgid "Pixbuf Icon"
 msgstr "Pixbuf-Symbol"
 
-#: ../gdl/gdl-dock-object.c:243
+#: ../gdl/gdl-dock-object.c:251
 msgid "Pixbuf icon for the dock object"
 msgstr "Pixbuf-Symbol für das Dock-Objekt"
 
-#: ../gdl/gdl-dock-object.c:253
+#: ../gdl/gdl-dock-object.c:263
 msgid "Dock master"
 msgstr "Dock-Master"
 
-#: ../gdl/gdl-dock-object.c:254
+#: ../gdl/gdl-dock-object.c:264
 msgid "Dock master this dock object is bound to"
 msgstr "Dock-Master, an den dieses Dock-Objekt angebunden ist"
 
-#: ../gdl/gdl-dock-object.c:617
+#: ../gdl/gdl-dock-object.c:638
 #, c-format
-msgid "Call to gdl_dock_object_dock in a dock object %p (object type is %s) which hasn't implemented this method"
-msgstr "Rückfrage an gdl_dock_objekt_dock in einem Dock-Objekt %p (Objekttyp ist %s), welches diese Methode nicht implementiert"
+msgid ""
+"Call to gdl_dock_object_dock in a dock object %p (object type is %s) which "
+"hasn't implemented this method"
+msgstr ""
+"Rückfrage an gdl_dock_objekt_dock in einem Dock-Objekt %p (Objekttyp ist "
+"%s), welches diese Methode nicht implementiert"
 
-#: ../gdl/gdl-dock-object.c:830
+#: ../gdl/gdl-dock-object.c:851
 #, c-format
-msgid "Dock operation requested in a non-bound object %p. The application might crash"
-msgstr "Dock-Operation in einem unverbundenen Objekt %p angefordert. Die Anwendung stürzt möglicherweise ab"
+msgid ""
+"Dock operation requested in a non-bound object %p. The application might "
+"crash"
+msgstr ""
+"Dock-Operation in einem unverbundenen Objekt %p angefordert. Die Anwendung "
+"stürzt möglicherweise ab"
 
-#: ../gdl/gdl-dock-object.c:837
+#: ../gdl/gdl-dock-object.c:858
 #, c-format
 msgid "Cannot dock %p to %p because they belong to different masters"
-msgstr "Dock %p konnte nicht an %p angedockt werden, da sie zu unterschiedlichen Mastern gehören"
+msgstr ""
+"Dock %p konnte nicht an %p angedockt werden, da sie zu unterschiedlichen "
+"Mastern gehören"
 
-#: ../gdl/gdl-dock-object.c:895
+#: ../gdl/gdl-dock-object.c:923
 #, c-format
-msgid "Attempt to bind to %p an already bound dock object %p (current master: %p)"
-msgstr "Versuch, ein bereits angebundenes Objekt an %p anzubinden (%p, aktueller Master: %p)"
+msgid ""
+"Attempt to bind to %p an already bound dock object %p (current master: %p)"
+msgstr ""
+"Versuch, ein bereits angebundenes Objekt an %p anzubinden (%p, aktueller "
+"Master: %p)"
 
 #: ../gdl/gdl-dock-paned.c:145
 msgid "Position"
@@ -351,8 +423,12 @@ msgstr "Klebrig"
 
 # CHECK
 #: ../gdl/gdl-dock-placeholder.c:167
-msgid "Whether the placeholder will stick to its host or move up the hierarchy when the host is redocked"
-msgstr "Ob der Platzhalter beim erneuten Andocken seines Hosts bei diesem bleiben oder in der Hierarchie aufsteigen soll"
+msgid ""
+"Whether the placeholder will stick to its host or move up the hierarchy when "
+"the host is redocked"
+msgstr ""
+"Legt fest, ob der Platzhalter beim erneuten Andocken seines Hosts bei diesem "
+"bleiben oder in der Hierarchie aufsteigen soll"
 
 #: ../gdl/gdl-dock-placeholder.c:174
 msgid "Host"
@@ -368,8 +444,12 @@ msgstr "Nächste Platzieren"
 
 # CHECK
 #: ../gdl/gdl-dock-placeholder.c:183
-msgid "The position an item will be docked to our host if a request is made to dock to us"
-msgstr "Die Position, an die ein Objekt an unseren Host angedockt wird, falls eine Anfrage zum andocken an uns gemacht wurde"
+msgid ""
+"The position an item will be docked to our host if a request is made to dock "
+"to us"
+msgstr ""
+"Die Position, an die ein Objekt an unseren Host angedockt wird, falls eine "
+"Anfrage zum andocken an uns gemacht wurde"
 
 #: ../gdl/gdl-dock-placeholder.c:193
 msgid "Width for the widget when it's attached to the placeholder"
@@ -385,7 +465,8 @@ msgstr "Freischwebend immer sichtbar"
 
 #: ../gdl/gdl-dock-placeholder.c:208
 msgid "Whether the placeholder is standing in for a floating toplevel dock"
-msgstr "Legt fest, ob der Platzhalter für ein schwebendes immer sichtbares Dock steht"
+msgstr ""
+"Legt fest, ob der Platzhalter für ein schwebendes immer sichtbares Dock steht"
 
 #: ../gdl/gdl-dock-placeholder.c:214
 msgid "X Coordinate"
@@ -411,10 +492,15 @@ msgstr "Versuch, ein Dock-Objekt an einen unverbundenen Platzhalter anzudocken"
 #: ../gdl/gdl-dock-placeholder.c:641
 #, c-format
 msgid "Got a detach signal from an object (%p) who is not our host %p"
-msgstr "Es wurde ein Ablösesignal von einem Objekt (%p) erhalten, das nicht unser Host %p ist"
+msgstr ""
+"Es wurde ein Ablösesignal von einem Objekt (%p) erhalten, das nicht unser "
+"Host %p ist"
 
 #: ../gdl/gdl-dock-placeholder.c:666
 #, c-format
-msgid "Something weird happened while getting the child placement for %p from parent %p"
-msgstr "Beim Erhalten der Kindplatzierung für %p vom Elternobjekt %p ist etwas seltsames passiert"
-
+msgid ""
+"Something weird happened while getting the child placement for %p from "
+"parent %p"
+msgstr ""
+"Beim Erhalten der Kindplatzierung für %p vom Elternobjekt %p ist etwas "
+"seltsames passiert"
